--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
   </head>
   <body>
+    <p>A service to search for information on slow internet connections.</p>
     <input class="search">
     <br><br>
     <button class="submit">Search</button>
