--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 
   </head>
   <body>
+    
+    <h3>Speed Search</h3>
     <p>A service to search for information on slow internet connections.</p>
     <input class="search">
     <br><br>
