--- a/index.html
+++ b/index.html
@@ -4,23 +4,43 @@
     body {
       text-align: center;
       margin: 40px 10px 10px 10px;
+      font-family: 'Proxima Nova', Avenir, Helvetica, Arial;
+    }
+
+    h3 {
+      font-family: Futura;
     }
   
     input {
       height: 30px;
-      width: 50vw;
+      width: 80vw;
       border-radius: 5px;
-      border: 1px solid black;
+      border: 1px solid #7B8292;
       padding: 4px;
     }
   
     .content {
       text-align: left;
+      font-family: serif;
+    }
+
+    a {
+      text-decoration: none;
+      color: blue;
+      line-height: 120%;
+    }
+
+    b {
+      margin-top: 10px;
+      display: block;
+      text-align: center;
     }
     </style>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   </head>
   <body>
+    <h2>SpeedSearch</h2>
+    <p>When you need information on throttled internet connection.</p>
     <input class="search">
     <br><br>
     <button class="submit">Search</button>
@@ -31,11 +51,12 @@
     <div class="content">
     </div>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <script src="script.js"></script>
     <script>
 
     var readable = function(a) {
-      return () => {
+      return function() {
+        $('.content').html('<b>Loading...</b>')
         $.ajax({
           url:"https://api.mastermind.do/115?url=" + a.xhref,
           crossDomain: true,
@@ -52,29 +73,39 @@
       }
     }
 
-      $('.submit').click(() => {
-        var search = $('.search').val()
-        $.ajax({
-          url:"https://api.mastermind.do/116?search="+search,
-          crossDomain: true,
-          success: function (response) {
-            $('.links').html('')
-            for (var item of response.result) {
-              var a = document.createElement('a');
-              var br = document.createElement('br');
-              a.textContent = item.t;
-              a.xhref = item.l
-              a.href = '#'
-              a.onclick = readable(a)
-              $('.links').append(a)
-              $('.links').append(br)
-            }
-          },
-          error: function (xhr, status) {
-            //handle errors
+    var search = function() {
+      var search = $('.search').val()
+      $('.links').html('<b>Loading...</b>')
+
+      $.ajax({
+        url:"https://api.mastermind.do/116?search="+search,
+        crossDomain: true,
+        success: function (response) {
+          $('.links').html('')
+          for (var item of response.result) {
+            var a = document.createElement('a');
+            var br = document.createElement('br');
+            a.textContent = item.t;
+            a.xhref = item.l
+            a.href = '#'
+            a.onclick = readable(a)
+            $('.links').append(a)
+            $('.links').append(br)
           }
-        });
-      })
+        },
+        error: function (xhr, status) {
+          //handle errors
+        }
+      });
+    } 
+
+    $('.submit').click(search)
+
+    $(document).keypress(function(e) {
+      if(e.which == 13) {
+        search();
+      }
+    });
     </script>
   </body>
 </html>
