--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   </head>
   <body>
-    <h2>SpeedSearch</h2>
-    <p>When you need information on very slow internet connections.</p>
+    <h2>TinySearch</h2>
+    <p>Get information on very slow internet connections.</p>
     <input class="search">
     <br><br>
     <button class="submit">Search</button>
