--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       $('.links').html('<b>Loading...</b>')
 
       $.ajax({
-        url:"https://api.mastermind.do/116?search="+search.replace(/\s+/g, '-'),
+        url:"https://api.mastermind.do/116?search="+search,
         crossDomain: true,
         success: function (response) {
           $('.links').html('')
