Update word wrap

--- a/index.html
+++ b/index.html
@@ -21,8 +21,6 @@
   
     .content {
       text-align: left;
-      white-space: pre;
-      word-wrap: break-word;
     }
 
     a {
@@ -64,7 +62,7 @@
           success: function (response) {
             $('.content').html('')
             var p = document.createElement('p');
-            p.textContent = response.result.t
+	    p.textContent = response.result.t.replace(/\n/g, '<br />')
             $('.content').append(p)
           },
           error: function (xhr, status) {
